# 2048-tools-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: core.rs  core_2048.rs  error.rs  lib.rs
